Change pink color (#f4b9d6) to blue (#4a90e2) throughout the site

--- a/src/lib/style.css
+++ b/src/lib/style.css
@@ -3,7 +3,7 @@
 :root {
   /* colors */
   --color-dark: #231f20;
-  --color-pink: #f4b9d6;
+  --color-pink: #4a90e2;
   --color-pink-bright: #ff00ff;
 
   /* breakpoints */
